edit header and index

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,15 @@
 
     })
     <main class="container">
-        213
+        <div class="bg-light rounded-top">
+            <div style="padding-top: 200px">
+                <div style="padding-left: 100px; padding-right: 100px; padding-bottom: 30px">
+                    <p class="fs-2">
+                        Почему выгорание действительно опасная вещь
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 
     @@include('../parts/footer.html', {
