--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,18 +7,19 @@
     @@include('../parts/header.html', {
 
     })
-    <main class="container">
-        <div class="bg-light rounded-top">
-            <div style="padding-top: 200px">
+    <main class="container container--main">
+
+        <div class="bg-light main--card">
+            <div style="padding-top: 250px">
                 <div style="padding-left: 100px; padding-right: 100px; padding-bottom: 30px">
-                    <p class="fs-2">
+                    <p class="fs-4">
                         Почему выгорание действительно опасная вещь
                     </p>
                 </div>
             </div>
         </div>
-    </main>
 
+    </main>
     @@include('../parts/footer.html', {
 
     })
