--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -1,43 +1,30 @@
-<!-- <header style="margin-top: 20px; margin-bottom: 20px">
-    <div class="container d-flex flex-wrap align-items-center">
-        <div class="me-auto">
-            <a href="/">
+<header style="margin-bottom: 30px; backdrop-filter: blur(0.1rem);">
+    <div class="container container--main">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+            <a href="/" aria-label="Перейти на главную страницу"
+                class="d-flex align-items-center col-md-3 text-decoration-none">
                 <img src="/img/logo/special.svg" width="175" alt="Логотип Спешиал">
             </a>
-        </div>
-        <div class="header--text-best">
-            <a href="/best/" class="header--link-best">
-                Лучшее
-            </a>
-        </div>
-    </div>
-</header> -->
 
-<header class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-        <a href="/" aria-label="Перейти на главную страницу"
-            class="d-flex align-items-center col-md-3 text-decoration-none">
-            <img src="/img/logo/special.svg" width="175" alt="Логотип Спешиал">
-        </a>
+            <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0">
+                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Статьи</a></li>
+                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Кабинет</a></li>
+                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Игры</a></li>
+                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Подробнее</a></li>
+            </ul>
 
-        <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link mx-2 px-3 header--nav-link">Статьи</a></li>
-            <li><a href="#" class="nav-link mx-2 px-3 header--nav-link">Кабинет</a></li>
-            <li><a href="#" class="nav-link mx-2 px-3 header--nav-link">Игры</a></li>
-            <li><a href="#" class="nav-link mx-2 px-3 header--nav-link">Подробнее</a></li>
-        </ul>
-
-        <div class="col-md-3 text-end">
-            <a href="/best/" class="btn btn-light btn-rounded fs-5 text-dark px-4">
-                <span class="d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                        class="icon me-btn-1" viewBox="0 0 16 16">
-                        <path
-                            d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
-                    </svg>
-                    Лучшее
-                </span>
-            </a>
+            <div class="col-md-3 text-end">
+                <a href="/best/" class="btn btn-light btn-rounded fs-5 text-dark px-4">
+                    <span class="d-flex align-items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon me-btn-1"
+                            viewBox="0 0 16 16">
+                            <path
+                                d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
+                        </svg>
+                        Лучшее
+                    </span>
+                </a>
+            </div>
         </div>
     </div>
 </header>
