work at adaptive header

--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -1,7 +1,7 @@
 <header style="margin-bottom: 30px; backdrop-filter: blur(0.1rem);">
     <div class="container container--main">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <div class="me-3">
+            <div class="me-5">
                 <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-3 text-decoration-none">
                     <img src="/img/logo/special.svg" height="40" alt="Логотип Спешиал">
                 </a>
@@ -14,9 +14,9 @@
                 <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">VR</a></li>
             </ul>
 
-            <div class="col-md-3 text-end">
-                <div class="d-flex">
-                    <div>
+            <div class="col-md-3">
+                <div class="d-flex justify-content-end">
+                    <div class="header--adaptive-best">
                         <a href="/best/" class="btn btn-dark btn-rounded fs-5 text-dark px-4">
                             <span class="d-flex text-white align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1" viewBox="0 0 16 16">
@@ -27,8 +27,8 @@
                             </span>
                         </a>
                     </div>
-                    <div>
-                        <button class="btn btn-dark btn-rounded fs-5 text-dark h-100 ms-2 px-3">
+                    <div class="header--adaptive-more">
+                        <button class="btn btn-dark btn-rounded fs-5 text-dark ms-2 px-4 header--best-p">
                             <span class="d-flex align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert" viewBox="0 0 16 16">
                                     <path
