work at main page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,8 +17,11 @@
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы, доступные каждую неделю</h1>
                 <p class="fs-5">
-                    Читайте полезную информацию в удобном для себя формате в удобное время,
-                    познавая полезные статьи.
+                    Читайте статьи про программирование. В удобном формате: Телеграм, Яндекс Дзен,
+                    news.creagoo.ru.
+                </p>
+                <p class="fs-5">
+                    Занимайте время полезной информацией вместе со Спешиал.
                 </p>
                 <div class="d-flex align-items-center">
                     <div>
@@ -37,7 +40,7 @@
     </div>
 
     <main class="container container--main">
-        <div class="bg-light main--card">
+        <div class="main--card" style="background-image: url(img/placeholders/dummy.jpg)">
             <div style="padding-top: 250px">
                 <div style="padding-left: 100px; padding-right: 100px; padding-bottom: 30px">
                     <p class="fs-4">
