work at main page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,12 +40,12 @@
     </div>
 
     <main class="container container--main">
-        <div class="main--card" style="background-image: url(img/placeholders/dummy.jpg)">
-            <div style="padding-top: 250px">
-                <div style="padding-left: 100px; padding-right: 100px; padding-bottom: 30px">
-                    <p class="fs-4">
+        <div class="main--card" style="background-image: url(img/placeholders/p-2.jpg)">
+            <div class="main--main-card-out">
+                <div class="main--main-card-in">
+                    <a href="#" class="fs-4">
                         Почему выгорание действительно опасная вещь
-                    </p>
+                    </a>
                 </div>
             </div>
         </div>
