add change theme

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -43,7 +43,7 @@
         <div class="main--card" style="background-image: url(img/placeholders/p-2.jpg)">
             <div class="main--main-card-out">
                 <div class="main--main-card-in">
-                    <a href="#" class="fs-4">
+                    <a href="#" class="fs-4 main--card-link">
                         Почему выгорание действительно опасная вещь
                     </a>
                 </div>
