--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../parts/head.html', {
-"title": "Главная страница"
+"title": ""
 })
 <body>
     @@include('../parts/header.html', {
