grid at main page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,16 +39,51 @@
         </div>
     </div>
 
-    <main class="container container--main">
-        <div class="main--card" style="background-image: url(img/placeholders/p-2.jpg)">
-            <div class="main--main-card-out">
-                <div class="main--main-card-in">
-                    <a href="#" class="fs-4 main--card-link">
-                        Почему выгорание действительно опасная вещь
-                    </a>
+    <main>
+
+        <div class="container container--main">
+            <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3">
+                <div class="col px-0">
+                    <div class="main--card main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
+                        <div class="main--main-card-out">
+                            <div class="main--main-card-in">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
+                                    Выгорание —<br>причины, симптомы, помощь
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="container container--main">
+            <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
+                <div class="col px-0">
+                    <div class="main--card main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
+                        <div class="main--main-card-out">
+                            <div class="main--main-card-in">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
+                                    Выгорание —<br>причины, симптомы, лечение
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col px-0">
+                    <div class="main--card main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
+                        <div class="main--main-card-out">
+                            <div class="main--main-card-in">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
+                                    Выгорание —<br>причины, симптомы, лечение
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     @@include('../parts/footer.html', {
