--- a/src/html/index.html
+++ b/src/html/index.html
@@ -44,9 +44,9 @@
         <div class="container container--main">
             <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3">
                 <div class="col px-0">
-                    <div class="main--card main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
-                        <div class="main--main-card-out">
-                            <div class="main--main-card-in">
+                    <div class="main--card main--card-1 main--card-margin" style="background-image: url(img/placeholders/p-4.jpg)">
+                        <div class="card--out card--out-1">
+                            <div class="card-in--1">
                                 <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
                                     Выгорание —<br>причины, симптомы, помощь
                                 </a>
@@ -60,10 +60,10 @@
         <div class="container container--main">
             <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
                 <div class="col px-0">
-                    <div class="main--card main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
-                        <div class="main--main-card-out">
-                            <div class="main--main-card-in">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
+                    <div class="main--card main--card-2 main--card-margin" style="background-image: url(img/placeholders/p-1.jpg)">
+                        <div class="card--out card--out-2">
+                            <div class="card-in--2">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
                                     Выгорание —<br>причины, симптомы, лечение
                                 </a>
                             </div>
@@ -71,10 +71,48 @@
                     </div>
                 </div>
                 <div class="col px-0">
-                    <div class="main--card main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
-                        <div class="main--main-card-out">
-                            <div class="main--main-card-in">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
+                    <div class="main--card main--card-2 main--card-margin" style="background-image: url(img/placeholders/p-5.jpg)">
+                        <div class="card--out card--out-2">
+                            <div class="card-in--2">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
+                                    Выгорание —<br>причины, симптомы, лечение
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container container--main">
+            <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
+                <div class="col px-0">
+                    <div class="main--card main--card-3 main--card-margin" style="background-image: url(img/placeholders/p-1.jpg)">
+                        <div class="card--out card--out-2">
+                            <div class="card-in--2">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                                    Выгорание —<br>причины, симптомы, лечение
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col px-0">
+                    <div class="main--card main--card-3 main--card-margin" style="background-image: url(img/placeholders/p-4.jpg)">
+                        <div class="card--out card--out-2">
+                            <div class="card-in--2">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                                    Выгорание —<br>причины, симптомы, лечение
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col px-0">
+                    <div class="main--card main--card-3 main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
+                        <div class="card--out card--out-2">
+                            <div class="card-in--2">
+                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
                                     Выгорание —<br>причины, симптомы, лечение
                                 </a>
                             </div>
