--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -1,4 +1,4 @@
-<header style="margin-bottom: 30px; backdrop-filter: blur(0.1rem);">
+<header class="header--main">
     <div class="container container--main">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
             <div class="me-5">
