--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -6,8 +6,8 @@
                     <div>
                         <a href="#" target="_blank" class="footer--icon-link"
                             aria-label="Открыть новости Спешиал в телеграме">
-                            <svg width="85" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" fill="dark"
-                                 viewBox="0 0 100 100">
+                            <svg width="85" xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 100 100" class="footer-icon">
                                 <path
                                     d="m38 60.6 23.7 17.5c2.7 1.5 4.7.7 5.3-2.5l9.7-45.5c1-4-1.5-5.7-4.1-4.6L16 47.4c-3.9 1.6-3.8 3.7-.7 4.7l14.6 4.6 33.7-21.2c1.6-1 3-.4 1.9.6L38 60.6z" />
                             </svg>
@@ -15,32 +15,34 @@
                     </div>
                 </div>
                 <div class="col">
-                    <a href="#" target="_blank" aria-label="Открыть новости Спешиал в Вконтакте"
-                        class="btn btn-light rounded-circle">
-                        <svg width="64" viewBox="0 0 68 43" class="footer--icon"
-                            fill="dark" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M37.2085 42.0418C14.4168 42.0418 1.41691 26.4169 0.875244 0.41687L12.2919 0.41687C12.6669 19.5002 21.0834 27.5835 27.75 29.2501L27.75 0.41687L38.5004 0.41687V16.8751C45.0837 16.1668 51.9995 8.66687 54.3329 0.41687L65.0832 0.41687C63.2915 10.5835 55.7915 18.0835 50.4582 21.1668C55.7915 23.6668 64.3336 30.2085 67.5836 42.0418H55.7499C53.2082 34.1252 46.8754 28.0001 38.5004 27.1668L38.5004 42.0418H37.2085Z"
-                                fill="black" />
-                        </svg>
-                    </a>
+                    <div>
+                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть новости Спешиал в телеграме">
+                            <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
+                                <path
+                                    d="M53 73.8c-22.7 0-35.7-15.6-36.3-41.6h11.4c.4 19.1 8.8 27.2 15.5 28.8V32.2h10.7v16.5c6.6-.7 13.5-8.2 15.8-16.5h10.8C79 42.4 71.5 49.9 66.2 52.9c8.4 4.2 14.7 11.8 17.2 20.9H71.5c-2.5-7.9-8.9-14-17.2-14.9v14.9H53z" />
+                            </svg>
+                        </a>
+                    </div>
                 </div>
                 <div class="col">
-                    <a href="#" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30.98 31.01" fill="dark" width="64" class="m-2">
-                            <path class="cls-1"
-                                d="M960.07,524.94c-.08,6.28-.51,9.82-2.87,12.17S951.32,539.9,945,540v.93c6.28.07,9.81.5,12.16,2.86s2.79,5.89,2.87,12.17H961c.08-6.28.51-9.81,2.87-12.17s5.88-2.79,12.16-2.86V540c-6.28-.08-9.81-.51-12.16-2.87s-2.79-5.89-2.87-12.17Z"
-                                transform="translate(-945.04 -524.94)" />
-                        </svg>
-                    </a>
+                    <div>
+                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть новости Спешиал в телеграме">
+                            <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
+                                <path
+                                    d="M49.1 17.2C48.9 30.5 48 38 43 43s-12.4 5.8-25.8 6v2c13.3.2 20.7 1 25.7 6s5.9 12.4 6.1 25.7h2c.2-13.2 1.1-20.7 6-25.7s12.4-5.9 25.7-6v-2C69.5 48.9 62 48 57 43s-5.8-12.5-6-25.7l-1.9-.1z" />
+                            </svg>
+                        </a>
+                    </div>
                 </div>
                 <div class="col">
-                    <a href="#" target="_blank">
-                        <svg width="19" height="14" viewBox="0 0 19 14" fill="dark" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M18.2594 1.14781C17.5736 0.33255 16.3073 0 13.8891 0H5.11076C2.63714 0 1.34943 0.354001 0.666165 1.22196C0 2.06823 0 3.31514 0 5.04089V8.33017C0 11.6735 0.7904 13.371 5.11076 13.371H13.8891C15.9862 13.371 17.1483 13.0776 17.9001 12.3581C18.6711 11.6203 19 10.4157 19 8.33017V5.04089C19 3.22094 18.9485 1.96668 18.2594 1.14781ZM12.1981 7.13965L8.21186 9.22289C8.12275 9.26947 8.02529 9.29258 7.92796 9.29258C7.81776 9.29258 7.70781 9.26291 7.61042 9.20395C7.42704 9.09284 7.31506 8.89408 7.31506 8.67969V4.52656C7.31506 4.31254 7.42673 4.11397 7.60975 4.00279C7.79282 3.89162 8.02051 3.88402 8.21045 3.98269L12.1967 6.05251C12.3995 6.15781 12.5268 6.36717 12.5271 6.59559C12.5274 6.8242 12.4006 7.03386 12.1981 7.13965Z"/>
-                        </svg>
-                    </a>
+                    <div>
+                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть новости Спешиал в телеграме">
+                            <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
+                                <path
+                                    d="M76.7 33.1c-2.1-2.5-6-3.5-13.3-3.5H36.6c-7.5 0-11.5 1.1-13.6 3.7s-2 6.4-2 11.7v10c0 10.2 2.4 15.4 15.6 15.4h26.8c6.4 0 10-.9 12.2-3.1S79 61.4 79 55V45c0-5.6-.2-9.4-2.3-11.9zM58.2 51.4 46 57.8c-.3.1-.6.2-.9.2-.4 0-.7-.1-1-.3-.6-.3-.9-.9-.9-1.6V43.4c0-.7.4-1.3.9-1.6.6-.3 1.3-.4 1.8-.1L58.1 48c.9.5 1.3 1.6.8 2.5 0 .4-.3.7-.7.9z" />
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
