--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -3,15 +3,15 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
             <div class="me-5">
                 <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-3 text-decoration-none">
-                    <img src="/img/logo/special.svg" height="40" alt="Логотип Спешиал">
+                    <img src="/img/logo/special.svg" height="44" alt="Логотип Спешиал">
                 </a>
             </div>
 
             <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
-                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Статьи</a></li>
-                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Кабинет</a></li>
-                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">Игры</a></li>
-                <li class="mx-2 px-3"><a href="#" class="nav-link header--nav-link">VR</a></li>
+                <li class="mx-2 px-3"><a href="/aquarium/" class="nav-link header--nav-link">Кабинет</a></li>
+                <li class="mx-2 px-3"><a href="/creagoo/" class="nav-link header--nav-link">Игры</a></li>
+                <li class="mx-2 px-3"><a href="/virtualreality/" class="nav-link header--nav-link">VR</a></li>
+                <li class="mx-2 px-3"><a href="/articles/" class="nav-link header--nav-link">Статьи</a></li>
             </ul>
 
             <div class="col-md-3">
