--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -3,7 +3,8 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
             <div class="me-5">
                 <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-3 text-decoration-none">
-                    <img src="/img/logo/special.svg" height="44" alt="Логотип Спешиал">
+                    <img src="/img/logo/special.svg" class="header--logo-pc" height="60" alt="Логотип Спешиал">
+                    <img src="/img/logo/logo.svg" class="header--logo-mobile" height="60" alt="Логотип Спешиал">
                 </a>
             </div>
 
