--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 
     })
 
-    <div class="container col-xxl-8 py-5">
+    <div class="container col-xxl-10 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="/img/content/main--special.png" class="d-block mx-lg-auto img-fluid"
@@ -41,86 +41,9 @@
 
     <main>
 
-        <div class="container container--main">
-            <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3">
-                <div class="col px-0">
-                    <div class="main--card main--card-1 main--card-margin" style="background-image: url(img/placeholders/p-4.jpg)">
-                        <div class="card--out card--out-1">
-                            <div class="card-in--1">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link">
-                                    Выгорание —<br>причины, симптомы, помощь
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    @@include('../parts/p--main.html', {
 
-        <div class="container container--main">
-            <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
-                <div class="col px-0">
-                    <div class="main--card main--card-2 main--card-margin" style="background-image: url(img/placeholders/p-1.jpg)">
-                        <div class="card--out card--out-2">
-                            <div class="card-in--2">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
-                                    Выгорание —<br>причины, симптомы, лечение
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="main--card main--card-2 main--card-margin" style="background-image: url(img/placeholders/p-5.jpg)">
-                        <div class="card--out card--out-2">
-                            <div class="card-in--2">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
-                                    Выгорание —<br>причины, симптомы, лечение
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container container--main">
-            <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
-                <div class="col px-0">
-                    <div class="main--card main--card-3 main--card-margin" style="background-image: url(img/placeholders/p-1.jpg)">
-                        <div class="card--out card--out-2">
-                            <div class="card-in--2">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                                    Выгорание —<br>причины, симптомы, лечение
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="main--card main--card-3 main--card-margin" style="background-image: url(img/placeholders/p-4.jpg)">
-                        <div class="card--out card--out-2">
-                            <div class="card-in--2">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                                    Выгорание —<br>причины, симптомы, лечение
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="main--card main--card-3 main--card-margin" style="background-image: url(img/placeholders/p-2.jpg)">
-                        <div class="card--out card--out-2">
-                            <div class="card-in--2">
-                                <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                                    Выгорание —<br>причины, симптомы, лечение
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    })
 
     </main>
 
