--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer--main">
-    <div class="container container--main ">
-        <div class="container text-center">
+    <div class="container container--main">
+        <div class="container mb-3 text-center">
             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
                 <div class="col">
                     <div>
@@ -45,6 +45,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="d-flex flex-wrap justify-content-center">
+            <a href="#" class="footer--more footer--more-link">Политика конфиденциальности</a>
+            <a href="#" class="footer--more footer--more-link">news@creagoo.ru</a>
+            <a href="#" class="footer--more footer--more-link">Английская версия</a>
+            <a href="#" class="footer--more footer--more-link ">Проект от dybka.ru</a>
         </div>
     </div>
 </footer>
