--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,14 +8,14 @@
 
     })
 
-    <div class="container col-xxl-10 py-5">
+    <!-- <div class="container col-xxl-10 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="/img/content/main--special.png" class="d-block mx-lg-auto img-fluid"
                     alt="Фотография 3д текста Спешиал" width="700" height="500">
             </div>
             <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы, доступные каждую неделю</h1>
+                <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы каждую неделю</h1>
                 <p class="fs-5">
                     Читайте статьи про программирование. В удобном формате: Телеграм, Яндекс Дзен,
                     news.creagoo.ru.
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <main>
 
