--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -50,6 +50,7 @@
             <a href="#" class="footer--more footer--more-link">Политика конфиденциальности</a>
             <a href="#" class="footer--more footer--more-link">news@creagoo.ru</a>
             <a href="#" class="footer--more footer--more-link">Английская версия</a>
+            <a href="#" class="footer--more footer--more-link ">Подробнее</a>
             <a href="#" class="footer--more footer--more-link ">Проект от dybka.ru</a>
         </div>
     </div>
