--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -11,7 +11,7 @@
         <title>Special — полезные новости в удобном формате</title>
     }
 
-    <link rel="icon" href="/img/logo/icon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/logo/ico.ico" type="image/x-icon">
     <meta name="theme-color" content="#000">
 
     <script>
