--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -2,9 +2,28 @@
     <div class="container container--main">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
             <div class="me-5">
-                <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-3 text-decoration-none">
-                    <img src="/img/logo/special.svg" class="header--logo-pc" height="60" alt="Логотип Спешиал">
-                    <img src="/img/logo/logo.svg" class="header--logo-mobile" height="60" alt="Логотип Спешиал">
+                <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-12 text-decoration-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="240" class="icon header--logo-pc" viewBox="0 0 1211.79 303.25">
+                        <path
+                            d="M877.07 167.05a62 62 0 0 1-13.94 31.84 76.34 76.34 0 0 1-29.5 21.48q-18 7.65-40.24 7.65-25.17 0-44.3-9.26t-29.87-26q-10.74-16.78-10.74-38.5 0-22 10.74-38.63t29.87-26.05q19.13-9.37 44.3-9.38 22.22 0 40.24 7.78a78.08 78.08 0 0 1 29.5 21.47 61.56 61.56 0 0 1 13.94 32h-41.22q-3.21-14.31-14.69-22.09t-27.77-7.78q-13.08 0-22.83 5.06a34.94 34.94 0 0 0-14.93 14.57q-5.19 9.5-5.19 23.08 0 13.32 5.19 22.83a34.86 34.86 0 0 0 14.93 14.56q9.75 5.07 22.83 5.06 16.55 0 28-8.14a34.85 34.85 0 0 0 14.44-21.48ZM919.79 67.82q-11.12 0-18.14-5.8a19 19 0 0 1-7-15.43q0-9.87 7-15.67t18.14-5.8q11.34 0 18.26 5.8t6.92 15.67q0 9.63-6.92 15.43t-18.26 5.8ZM899.3 82.39l20.49 3.94 20.73-3.94v141.93h-41.23ZM1111.08 154.22q-4 22.22-14.44 38.87a75.44 75.44 0 0 1-26.41 25.8 70.51 70.51 0 0 1-35.67 9.13q-20.49 0-36.29-9.26a63.79 63.79 0 0 1-24.56-25.91q-8.76-16.67-8.76-38.63 0-22.21 8.76-38.88a63.75 63.75 0 0 1 24.56-25.92q15.8-9.25 36.29-9.26a70.41 70.41 0 0 1 35.67 9.14 76.41 76.41 0 0 1 26.56 25.79q10.59 16.66 14.29 39.13Zm-104.42 0a45 45 0 0 0 5.07 21.72 37.4 37.4 0 0 0 13.94 14.68 39.18 39.18 0 0 0 20.49 5.31 46.79 46.79 0 0 0 21.84-5.31 59.24 59.24 0 0 0 18.15-14.68 70.51 70.51 0 0 0 12.34-21.72 72.12 72.12 0 0 0-12.34-21.85 58.68 58.68 0 0 0-18.15-14.81 46.79 46.79 0 0 0-21.84-5.31 39.18 39.18 0 0 0-20.49 5.31 37.29 37.29 0 0 0-13.94 14.81 45.73 45.73 0 0 0-5.07 21.85Zm93.56 70.1-5.93-51.34 6.67-18.76-6.67-18.54 5.93-51.83h42.7l-8.13 70.37 8.14 70.1ZM1170.57 34.25h41.22v190.07h-41.22Z" />
+                        <path
+                            d="M453.47 116.76a39.24 39.24 0 0 0-20.49-5.3 47.62 47.62 0 0 0-22 5.3 56.79 56.79 0 0 0-18.15 14.81 73.78 73.78 0 0 0-12.22 21.85 72 72 0 0 0 12.22 21.72 57.34 57.34 0 0 0 18.15 14.69 47.5 47.5 0 0 0 22 5.3 39.14 39.14 0 0 0 20.49-5.3 37.45 37.45 0 0 0 14-14.69 45.06 45.06 0 0 0 5.06-21.72 45.84 45.84 0 0 0-5.06-21.85 37.31 37.31 0 0 0-14-14.81Z"
+                            class="cls-1" />
+                        <path
+                            d="M530.98 152.93q0-22 10.73-38.51a72.77 72.77 0 0 1 29.5-25.8q18.76-9.26 42.71-9.25 24.43 0 42 10.73a70.28 70.28 0 0 1 25 26.47L907.49.5H171.65L.86 302.75h316.62L540.2 188.68q-9.2-15.68-9.22-35.75Zm-225.49 45q-11.24 14-31.47 21.6t-47.4 7.65q-27.65 0-48.62-8t-33.08-22.46a55.49 55.49 0 0 1-13.08-33.69h42.45a29.92 29.92 0 0 0 8.27 16.41q6.79 7 18.27 10.86a83.93 83.93 0 0 0 26.54 3.83q22 0 34.68-6.3t12.74-17.63a15.49 15.49 0 0 0-7.28-13.7q-7.29-4.8-27-7l-37.28-4.2q-36-3.95-52.2-16.91T134.79 92.2q0-18.25 10.74-31.1t30.26-19.62q19.48-6.8 45.9-6.8 25.67 0 45.66 7.53t31.85 21a50.56 50.56 0 0 1 12.83 31.47h-42.46a24.91 24.91 0 0 0-7.28-14.19q-6-6-16.66-9.38a83.59 83.59 0 0 0-24.93-3.34q-20 0-31.84 5.93t-11.85 16.78a14.56 14.56 0 0 0 7 13q7 4.58 24.81 6.79l38.76 4.69q25.66 2.72 40.85 8.76t21.72 16.17q6.54 10.13 6.54 25.67a50.19 50.19 0 0 1-11.2 32.41Zm199.82-5.92a64.88 64.88 0 0 1-24.52 25.96q-15.68 9.26-36.41 9.25-19.75 0-35.42-9.13a77 77 0 0 1-26.29-25.79c-.17-.27-.33-.56-.5-.83v72.78h-41.26V83.07h41.22v31.85c.13-.21.25-.42.37-.63a75.44 75.44 0 0 1 26.42-25.79 69.88 69.88 0 0 1 35.42-9.13q20.73 0 36.41 9.25a64.88 64.88 0 0 1 24.56 25.92q8.88 16.67 8.88 38.88 0 21.97-8.88 38.63Z"
+                            class="cls-1" />
+                        <path
+                            d="m576.79 169.92 7.15-3.67h-8.56c.41 1.26.87 2.48 1.41 3.67ZM634.4 114.42a41.73 41.73 0 0 0-20.24-4.69q-12.58 0-21.84 5.06A35.65 35.65 0 0 0 578 128.86a37.86 37.86 0 0 0-3.84 10h63.24l12.94-6.63a38.2 38.2 0 0 0-2.24-4.48 35 35 0 0 0-13.7-13.33Z"
+                            class="cls-1" />
+                        <path
+                            d="M627.27 196.92q-17.52 0-29.86-5.43a39.27 39.27 0 0 1-21.52-21.12l-36.61 18.75c.71 1.22 1.43 2.43 2.22 3.6q11.22 16.8 30.85 26t44.56 9.26a133.84 133.84 0 0 0 38.88-5.51 109.66 109.66 0 0 0 32.22-15.43v-27.65a104.68 104.68 0 0 1-28.88 13 115.77 115.77 0 0 1-31.86 4.53ZM680.02 117.02l-30.55 15.66a45.76 45.76 0 0 1 2.36 7h-16l-53.48 27.4h109.33q0-26.4-9.5-45.91c-.67-1.44-1.39-2.8-2.16-4.15Z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="60" class="icon header--logo-mobile" viewBox="0 0 907.48 303.25">
+                        <path
+                            d="M453.46 116.77a39.18 39.18 0 0 0-20.49-5.31 47.55 47.55 0 0 0-22 5.31 56.75 56.75 0 0 0-18.14 14.81 73.63 73.63 0 0 0-12.22 21.84 71.94 71.94 0 0 0 12.26 21.73 57.27 57.27 0 0 0 18.14 14.68 47.55 47.55 0 0 0 22 5.31 39.18 39.18 0 0 0 20.45-5.31 37.49 37.49 0 0 0 14-14.68 45.13 45.13 0 0 0 5-21.73 45.83 45.83 0 0 0-5-21.84 37.38 37.38 0 0 0-14-14.81Z" />
+                        <path
+                            d="M907.46.5H171.65L.86 302.76h316.6m-12-104.78q-11.24 13.95-31.47 21.6t-47.4 7.65q-27.64 0-48.63-8t-33.07-22.47a55.45 55.45 0 0 1-13.09-33.69h42.46a29.85 29.85 0 0 0 8.27 16.42q6.79 7 18.27 10.86a83.88 83.88 0 0 0 26.56 3.8q22 0 34.68-6.29t12.72-17.65a15.46 15.46 0 0 0-7.29-13.7q-7.28-4.82-27-7l-37.28-4.19q-36-3.94-52.21-16.91t-16.16-36.16q0-18.27 10.73-31.11t30.24-19.62q19.5-6.78 45.92-6.79 25.66 0 45.66 7.53t31.84 21a50.52 50.52 0 0 1 12.84 31.48h-42.48a24.94 24.94 0 0 0-7.28-14.2q-6-6-16.66-9.38a83.61 83.61 0 0 0-24.93-3.33q-20 0-31.84 5.92t-11.85 16.79a14.56 14.56 0 0 0 7 13q7 4.57 24.81 6.79l38.75 4.69q25.68 2.72 40.86 8.76t21.72 16.17q6.54 10.13 6.54 25.67a50.28 50.28 0 0 1-11.23 32.36Zm199.82-5.93a65 65 0 0 1-24.56 25.92q-15.69 9.25-36.41 9.26-19.75 0-35.43-9.14a76.94 76.94 0 0 1-26.28-25.79l-.5-.82v72.77h-41.19V83.07h41.22v31.85c.13-.2.24-.42.37-.62a75.36 75.36 0 0 1 26.41-25.8 70 70 0 0 1 35.43-9.13q20.73 0 36.41 9.26a65 65 0 0 1 24.56 25.92q8.88 16.65 8.88 38.87 0 21.97-8.88 38.63Z" />
+                    </svg>
                 </a>
             </div>
 
@@ -34,16 +53,17 @@
                     <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Статьи</p></li>
                 }
                 @@if(context.activeItem != "posts") {
-                <li class="mx-2 px-3"><a href="/articles/" class="nav-link header--nav-link">Статьи</a></li>
+                    <li class="mx-2 px-3"><a href="/articles/" class="nav-link header--nav-link">Статьи</a></li>
                 }
             </ul>
 
             <div class="col-md-3">
                 <div class="d-flex justify-content-end">
                     <div class="header--adaptive-best">
-                        <a href="/best/" class="btn btn-dark btn-rounded fs-5 text-dark px-4">
+                        <a href="/best/" class="btn btn-dark btn-rounded fs-5 px-4 py-2">
                             <span class="d-flex text-white align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="white"
+                                    height="20" class="me-btn-1" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
                                 </svg>
@@ -52,7 +72,8 @@
                         </a>
                     </div>
                     <div class="header--adaptive-more">
-                        <button class="btn btn-dark btn-rounded fs-5 text-dark ms-2 px-4 header--best-p">
+                        <button data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu"
+                            class="btn btn-dark btn-rounded fs-5 text-dark ms-2 px-4 header--best-p">
                             <span class="d-flex align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert" viewBox="0 0 16 16">
                                     <path
@@ -66,3 +87,35 @@
         </div>
     </div>
 </header>
+
+<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px"
+    id="mobileMenu" aria-labelledby="mobileMenuLabel">
+    <div class="offcanvas-header pt-4">
+        <button type="button" class="ms-auto btn" data-bs-dismiss="offcanvas" aria-label="Close">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" style="fill: var(--btn-light-click)"
+                viewBox="0 0 16 16">
+                <path
+                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
+            </svg>
+        </button>
+    </div>
+    <div class="offcanvas-body">
+        <div class="d-flex flex-wrap flex-column">
+            <a href="/best/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+                Лучшее
+            </a>
+            <a href="/aquarium/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+                Кабинет
+            </a>
+            <a href="/creagoo/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+                Игры
+            </a>
+            <a href="/virtualreality/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+                VR
+            </a>
+            <a href="/articles/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+                Статьи
+            </a>
+        </div>
+    </div>
+</div>
