--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -60,20 +60,20 @@
             <div class="col-md-3">
                 <div class="d-flex justify-content-end">
                     <div class="header--adaptive-best">
-                        <a href="/best/" class="btn btn-dark btn-rounded fs-5 px-4 py-2">
-                            <span class="d-flex text-white align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="white"
-                                    height="20" class="me-btn-1" viewBox="0 0 16 16">
+                        <div class="header--invert-bg text-invert btn-rounded fs-5 px-4 py-2">
+                            <a href="/best/" class="d-flex text-invert align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20"
+                                    height="20" class="me-btn-1 icon-invert" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
                                 </svg>
                                 Лучшее
-                            </span>
-                        </a>
+                            </a>
+                        </div>
                     </div>
                     <div class="header--adaptive-more">
                         <button data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu"
-                            class="btn btn-dark btn-rounded fs-5 text-dark ms-2 px-4 header--best-p">
+                            class="btn header--invert-bg text-invert btn-rounded fs-5 ms-2 px-4 header--best-p">
                             <span class="d-flex align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert" viewBox="0 0 16 16">
                                     <path
