--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -61,7 +61,7 @@
                 <div class="d-flex justify-content-end">
                     <div class="header--adaptive-best">
                         <div class="header--invert-bg text-invert btn-rounded fs-5 px-4 py-2">
-                            <a href="/best/" class="d-flex text-invert align-items-center">
+                            <a href="/best/" class="d-flex text-decoration-none text-invert align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20"
                                     height="20" class="me-btn-1 icon-invert" viewBox="0 0 16 16">
                                     <path
