--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -30,4 +30,6 @@
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/index.css">
+
+    <link rel="stylesheet" href="/css/grid.css">
 </head>
