footer and container

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,7 +25,7 @@
                 </p>
                 <div class="d-flex align-items-center">
                     <div>
-                        <a href="/about/" class="header--nav-link fs-4">
+                        <a href="/about.html" class="header--nav-link fs-4">
                             О проекте
                         </a>
                     </div>
