--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -47,11 +47,11 @@
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-            <a href="#" class="footer--more footer--more-link">Политика конфиденциальности</a>
-            <a href="#" class="footer--more footer--more-link">news@creagoo.ru</a>
-            <a href="#" class="footer--more footer--more-link">Английская версия</a>
-            <a href="#" class="footer--more footer--more-link ">Подробнее</a>
-            <a href="#" class="footer--more footer--more-link ">Проект от dybka.ru</a>
+            <a href="/privacypolicy.html" class="footer--more footer--more-link">Политика конфиденциальности</a>
+            <a href="mailto:daniil@creagoo.ru" class="footer--more footer--more-link">daniil@creagoo.ru</a>
+            <a href="/en/" class="footer--more footer--more-link">Английская версия</a>
+            <a href="/about.html" class="footer--more footer--more-link ">Подробнее</a>
+            <a href="//it.dybka.ru" class="footer--more footer--more-link ">Проект от dybka.ru</a>
         </div>
     </div>
 </footer>
