work at main page and at post page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,11 +39,22 @@
     </div>
 
     <main>
-
     @@include('../parts/p--main.html', {
 
     })
 
+    <div class="container">
+        <div class="mt-4">
+            <div class="d-flex flex-wrap justify-content-center align-items-center">
+                <a href="/articles/" class="link fs-4">Смотреть еще</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#9d9d9d" class="ms-3"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+                </svg>
+            </div>
+        </div>
+    </div>
     </main>
 
     @@include('../parts/footer.html', {
