--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,5 +1,5 @@
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3">
+    <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col px-0">
             <div class="main--card main--card-1 main--card-margin"
                 style="background-image: url(/img/placeholders/p-4.jpg)">
@@ -16,7 +16,7 @@
 </div>
 
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
+    <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
         <div class="col px-0">
             <div class="main--card main--card-2 main--card-margin"
                 style="background-image: url(/img/placeholders/p-1.jpg)">
@@ -45,7 +45,7 @@
 </div>
 
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
+    <div class="row row-cols-1 row-cols-lg-3 gx-2 g-lg-3">
         <div class="col px-0">
             <div class="main--card main--card-3 main--card-margin"
                 style="background-image: url(/img/placeholders/p-1.jpg)">
