--- a/src/parts/p--all.html
+++ b/src/parts/p--all.html
@@ -1,12 +1,30 @@
+<div class="container container--main">
+    <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
+        <div class="col px-0">
+            <div class="main--card main--card-1 main--card-margin"
+                style="background-image: url(/img/placeholders/p-4.jpg)">
+                <div class="card--out card--out-1">
+                    <div class="card-in--1">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h1 main--card-link card--text-size-big">
+                            Выгорание —<br>причины, симптомы, помощь
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
+    <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
         <div class="col px-0">
             <div class="main--card main--card-2 main--card-margin"
                 style="background-image: url(/img/placeholders/p-1.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h3 main--card-link card--text-size-normal">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -18,7 +36,8 @@
                 style="background-image: url(/img/placeholders/p-5.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h3 main--card-link card--text-size-normal">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -29,13 +48,14 @@
 </div>
 
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
+    <div class="row row-cols-1 row-cols-lg-3 gx-2 g-lg-3">
         <div class="col px-0">
             <div class="main--card main--card-3 main--card-margin"
                 style="background-image: url(/img/placeholders/p-1.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h5 main--card-link card--text-size-small">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -47,7 +67,8 @@
                 style="background-image: url(/img/placeholders/p-4.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h5 main--card-link card--text-size-small">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
@@ -59,147 +80,8 @@
                 style="background-image: url(/img/placeholders/p-2.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-5.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-4.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-2.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-5.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-4.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-2.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link">
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h5 main--card-link card--text-size-small">
                             Выгорание —<br>причины, симптомы, лечение
                         </a>
                     </div>
