--- a/src/html/p/vygoraniye-prichiny-simptomy-lecheniye/index.html
+++ b/src/html/p/vygoraniye-prichiny-simptomy-lecheniye/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/placeholders/p-1.jpg" alt="">
+            <img src="/img/placeholders/p-1.jpg" class="img-fluid" alt="">
             <figcaption class="img--desc">Деревянная скульптура</figcaption>
         </figure>
 
