--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -51,10 +51,12 @@
             <a href="mailto:daniil@creagoo.ru" class="footer--more footer--more-link">daniil@creagoo.ru</a>
             <a href="/en/" class="footer--more footer--more-link">Английская версия</a>
             <a href="/about.html" class="footer--more footer--more-link ">Подробнее</a>
+            <button onClick="ChangeTheme()" class="btn footer--more footer--more-link rounded-0">Сменить тему</button>
             <a href="//it.dybka.ru" class="footer--more footer--more-link ">Проект от dybka.ru</a>
         </div>
     </div>
 </footer>
 
+<script src="/js/theme.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
