--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -116,6 +116,9 @@
             <a href="/articles/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
                 Статьи
             </a>
+            <button onClick="ChangeTheme()" aria-label="Открыть лучшие статьи" class="header--mobile-item border-0 text-start fs-4">
+                Сменить тему
+            </button>
         </div>
     </div>
 </div>
