--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -1,7 +1,7 @@
 <header class="header--main">
     <div class="container-fluid">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <div class="me-5">
+            <div class="header--logo-margin">
                 <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-12 text-decoration-none">
                     <svg xmlns="http://www.w3.org/2000/svg" width="240" class="icon header--logo-pc" viewBox="0 0 1211.79 303.25">
                         <path
