--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,11 +1,11 @@
-<nav class="navbar sticky-bottom  navbar-expand-lg bg-white--adaptive text-white--adaptive">
-    <div class="container-fluid py-2">
+<nav class="sticky-bottom mt-3 navbar-expand-lg bg-white--adaptive text-white--adaptive">
+    <div class="container py-2">
         <div class="d-flex flex-wrap align-items-center">
             <div class="me-auto">
                 <p class="text-white--adaptive mb-0">Мы используем файлы cookie для Вашего удобства</p>
             </div>
             <div>
-                <button>
+                <button class="btn btn-dark footer--change-theme footer--text-invert">
                     Хорошо
                 </button>
             </div>
