get change theme

--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,4 +1,4 @@
-<nav class="sticky-bottom mt-3 navbar-expand-lg bg-white--adaptive text-white--adaptive">
+<!-- <nav class="sticky-bottom mt-3 navbar-expand-lg bg-white--adaptive text-white--adaptive">
     <div class="container py-2">
         <div class="d-flex flex-wrap align-items-center">
             <div class="me-auto">
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-</nav>
+</nav> -->
 
 <footer class="footer--main">
     <div class="container container--main">
