--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -75,7 +75,7 @@
                         <div class="text-invert btn-rounded fs-5">
                             <button onClick="ChangeThemeButton()" class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1" viewBox="0 0 16 16">
-                                    <use id="themechangebutton_icon" xlink:href="/img/icons/theme.svg#light"></use>
+                                    <use id="changethemesvg" xlink:href="/img/icons/theme.svg#light"></use>
                                 </svg>
                                 Тема
                             </button>
