--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -67,6 +67,7 @@
             <a href="/en/" class="footer--more footer--more-link">Английская версия</a>
             <a href="/about.html" class="footer--more footer--more-link ">Подробнее</a>
             <button onClick="ChangeTheme()" class="btn footer--more footer--more-link rounded-0">Сменить тему</button>
+            <a href="#" class="footer--more footer--more-link ">Получить RSS</a>
             <a href="//it.dybka.ru" class="footer--more footer--more-link ">Проект от dybka.ru</a>
         </div>
     </div>
