work at customize

--- a/src/html/best/index.html
+++ b/src/html/best/index.html
@@ -6,7 +6,7 @@
 
 <body>
     @@include('../../parts/header.html', {
-
+        "activeItem": "best"
     })
 
     <div class="container container--main">
