--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 @@include('../parts/head.html', {
 "title": ""
 })
-<body>
+<body style="background: var(--bg-color) !important;">
     @@include('../parts/header.html', {
 
     })
