--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -73,6 +73,7 @@
     </div>
 </footer>
 
+<script src="/js/bg.js"></script>
 <script src="/js/theme.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
