--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -49,6 +49,13 @@
                     <li class="mx-2 px-3"><a href="/virtualreality/" class="nav-link header--nav-link">VR</a></li>
                 }
 
+                @@if(context.activeItem == "best") {
+                    <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Лучшее</p></li>
+                }
+                @@if(context.activeItem != "best") {
+                    <li class="mx-2 px-3"><a href="/best/" class="nav-link header--nav-link">Лучшее</a></li>
+                }
+
                 @@if(context.activeItem == "posts") {
                     <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Статьи</p></li>
                 }
@@ -57,9 +64,9 @@
                 }
             </ul>
 
-            <div class="col-md-3">
+            <div class="col-md-3 me-2">
                 <div class="d-flex justify-content-end">
-                    <div class="header--adaptive-best mx-2">
+                    <!-- <div class="header--adaptive-best mx-2">
                         <div class="text-invert btn-rounded fs-5">
                             <a href="/best/" class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20"
@@ -70,14 +77,27 @@
                                 Лучшее
                             </a>
                         </div>
-                    </div>
-                    <div class="header--adaptive-best">
+                    </div> -->
+                    <div class="header--adaptive-best me-2">
                         <div class="text-invert btn-rounded fs-5">
                             <button onClick="ChangeThemeButton()" class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1" viewBox="0 0 16 16">
                                     <use id="changethemesvg" xlink:href="/img/icons/theme.svg#light"></use>
                                 </svg>
                                 Тема
+                            </button>
+                        </div>
+                    </div>
+                    <div class="header--adaptive-best">
+                        <div class="text-invert btn-rounded fs-5">
+                            <button onClick="ChangeBackground()"
+                                class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
+                                    viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
+                                </svg>
+                                Фон
                             </button>
                         </div>
                     </div>
