--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -106,7 +106,7 @@
     </div>
 </header>
 
-<div class="offcanvas canvas-bg show offcanvas-end" tabindex="-1" style="width: 550px"
+<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px"
     id="mobileMenu" aria-labelledby="mobileMenuLabel">
     <div class="offcanvas-header pt-4">
         <button type="button" class="ms-auto btn" data-bs-dismiss="offcanvas" aria-label="Close">
