--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,17 +1,17 @@
-<!-- <nav class="sticky-bottom mt-3 navbar-expand-lg bg-white--adaptive text-white--adaptive">
+<nav class="sticky-bottom mt-3 navbar-expand-lg bg-white--adaptive text-white--adaptive">
     <div class="container py-2">
         <div class="d-flex flex-wrap align-items-center">
             <div class="me-auto">
                 <p class="text-white--adaptive mb-0">Мы используем файлы cookie для Вашего удобства</p>
             </div>
             <div>
-                <button class="btn btn-dark footer--change-theme footer--text-invert">
+                <button onClick="CommitPrivacy()" class="btn btn-dark footer--change-theme footer--text-invert">
                     Хорошо
                 </button>
             </div>
         </div>
     </div>
-</nav> -->
+</nav>
 
 <footer class="footer--main">
     <div class="container container--main">
@@ -75,5 +75,6 @@
 
 <script src="/js/bg.js"></script>
 <script src="/js/theme.js"></script>
+<script src="/js/privacy.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
