get commit privacy

--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,4 +1,4 @@
-<nav class="sticky-bottom mt-3 navbar-expand-lg bg-white--adaptive text-white--adaptive">
+<nav id="privacyblock" class="sticky-bottom mt-3 d-none navbar-expand-lg bg-white--adaptive text-white--adaptive">
     <div class="container py-2">
         <div class="d-flex flex-wrap align-items-center">
             <div class="me-auto">
